Fixed issues of overflowing heights

--- a/main.css
+++ b/main.css
@@ -13,24 +13,28 @@ div#container {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-template-rows: repeat(5, minmax(0, auto));
+	margin: 10px;
 }
 
 #container nav {
-	grid-column: 2/13;
+	grid-column: 1/13;
 	grid-row: 1/2;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
+	margin-top: 30px;
+	padding: 50px;
 }
 
-#container h3 {
+#container nav img {
 	grid-column: 1/4;
 	grid-row: 1/2;
 	margin: 0;
 	padding: 0;
+	width: 100px;
 }
 
 #container ul.nav {
-	grid-column: 10/13;
+	grid-column: 11/13;
 	grid-row: 1/2;
 	padding: 0;
 	margin: 0;
@@ -39,56 +43,59 @@ div#container {
 #container ul.nav li {
 	list-style-type: none;
 	display: inline-block;
-	margin-right: 20px;
+	margin-right: 10px;
 }
 
-main {
-	grid-column: 2/13;
+#container main {
+	grid-column: 1/13;
+	padding: 50px;
 	grid-row: 2/3;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 }
-
-main #leftMain {
-	grid-column: 1/7;
-	display: grid;
-	grid-gap: 5px;
-	grid-template-rows: repeat(3, minmax(0, auto));
-}
-
-main #leftMain h3 {
-	grid-column: 1/12;
-}
-
-main #leftMain p {
-	grid-column: 1/12;
+#container main #leftMain {
+	grid-column: 1/6;
+	margin-top: 80px;
 }
 
 main #leftMain input {
-	grid-column: 1/8;
+	grid-column: 1/3;
+	color: hsl(0, 0%, 75%);
+	width: 50%;
+	padding: 5px;
+	grid-row: 3/4;
 }
 
 main #leftMain button {
-	grid-column: 8/12;
+	grid-column: 3/6;
+	border: none;
+	color: white;
+	background-color: hsl(224, 93%, 58%);
+	font-weight: 700;
+	padding: 7px 20px;
 }
 
-main #rightMain {
+#container main #rightMain {
 	grid-column: 8/13;
 }
-
-main #rightMain img {
-	width: 400px;
+#container main #rightMain img {
+	width: 500px;
 }
-
 section.firstSec {
-	grid-column: 2/13;
+	grid-column: 1/13;
 	grid-row: 3/4;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-template-rows: repeat(5, minmax(0, auto));
+	background-image: url(images/bg-curve-desktop.svg);
+	background-repeat: no-repeat;
+	background-position: initial;
+	padding: 50px;
+	background-color: hsl(240, 75%, 98%);
 }
 
 section.firstSec .leftArticle {
+	margin-top: 50px;
 	grid-column: 1/7;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
